@@ -3,6 +3,7 @@ git - ?
 	- Centered the thumbnails on the screenshots viewer
 	- Improved date selector
 	- Made the release date a required field
+	- Versioned the deleting and locking of database entries
 
 2.10 - 2010-01-10
 	- VN score on tag pages use plain averages instead of bayesian rating
